@@ -287,12 +287,13 @@
   extended Unicode sequence.
 
   In UTF-8 mode, some Unicode properties may be supported via
-  \samp{\\p\{xx\}} and \samp{\\P\{xx\}} which match characters with and
+  \samp{\p{xx}} and \samp{\P{xx}} which match characters with and
   without property \samp{xx} respectively.  For a list of supported
   properties see the PCRE documentation, but for example \samp{Lu} is
   \sQuote{upper case letter} and \samp{Sc} is \sQuote{currency symbol}.
   (This support depends on the PCRE library being compiled with
-  \sQuote{Unicode property support}: an external library might not be.)
+  \sQuote{Unicode property support}: an external library might not be.
+  It can be checked \emph{via} \code{\link{pcre_config}}.)
 
   The sequence \samp{(?#} marks the start of a comment which continues
   up to the next closing parenthesis.  Nested parentheses are not
